--- a/homework/detail.html
+++ b/homework/detail.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- 웹페이지 중앙부 -->
-    <div id="body">
+    <div id="main">
       <!-- 타이틀부 -->
       <div id="section-header">
         <div id="title"></div>
@@ -22,13 +22,11 @@
           <div id="date"></div>
         </div>
       </div>
-
       <!-- 내용부 -->
       <div id="section-body">
         <div class="section-title">내용</div>
         <div id="section-main"></div>
       </div>
-      
       <!-- 버튼부 -->
       <div id="section-footer">
         <div class="delete-btn-area">
@@ -38,6 +36,27 @@
           <button onclick="onClickModifyButton()" id="modify-btn">수정</button>
         </div>
       </div>
+
+      <!-- 회고 -->
+      <div id="회고영역">
+        <div id="회고영역_타이틀">회고</div>
+        <div id="회고입력부">
+          <input id="회고입력창" type="text" placeholder="회고를 남겨보세요.">
+          <button id="회고입력창입력버튼" onclick="onClickInputButton()">입력</button>
+        </div>
+        <div id="회고리스트">
+          <div class="회고인스턴스">
+            javascript 개발자가 되고 싶어요.
+            <div class="회고작성일자">[2024.09.02]</div>
+          </div>
+          <div class="회고인스턴스">
+            javascript 개발자가 되고 싶어요.
+            <div class="회고작성일자">[2024.09.02]</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
