--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <title>상세 페이지</title>
     <link rel="stylesheet" href="./detail.css">
     <script src="./detail.js"></script>
 </head>
+
 <body>
     <div class="root_container">
         <header class="header_container">
-            <a class="home_link" href="../index.html"><div class="header_title">민지의 다이어리</div></a>
+            <a class="home_link" href="../index.html">
+                <div class="header_title">민지의 다이어리</div>
+            </a>
         </header>
-        <section class="section_container">
+        <section class="detail_section_container">
             <div class="main_contents_container">
-                <div class="main_contents_title_container">
-                    <div id="detail_diary_title" class="main_contents_title">이것은 타이틀입니다.</div>
+                <div class="main_contents_article">
+                    <div class="main_contents_title_container">
+                        <div id="detail_diary_title" class="main_contents_title">이것은 타이틀입니다.</div>
                     </div>
                     <div class="main_contents_title_contents">
                         <div class="main_contents_mood_container">
@@ -24,7 +29,6 @@
                             <div id="detail_diary_date" class="main_contents_date">2024. 07. 12</div>
                             <div class="main_contents_date">작성</div>
                         </div>
-                        
                     </div>
                 </div>
                 <div class="main_contents_text_container">
@@ -36,7 +40,29 @@
                     <button class="button_list" onclick="deleteButtonPressed()">삭제</button>
                 </div>
             </div>
+            <div class="reminiscence_container">
+                <div class="reminiscence_container_items">
+                    <div class="reminiscence_title">회고</div>
+                    <div class="reminiscence_input_container">
+                        <input id="reminiscence_input_text" type="text" class="reminiscence_text" placeholder="회고를 남겨보세요." oninput="inputTextCheck()">
+                        <button class="reminiscence_input_button" onclick="inputButtonTapped()">입력</button>
+                    </div>
+                </div>
+                <div id="reminiscence_list" class="reminiscence_list_container">
+                        <div class="reminiscence_list_container_items">
+                            <div class="reminiscence_list_item_text">3년이 지나고 다시 보니 이때가 그립다.</div>
+                            <div class="reminiscence_list_item_date">[2024.09.01]</div>
+                        </div>
+                        <div class="break_line"></div>
+                        <div class="reminiscence_list_container_items">
+                            <div class="reminiscence_list_item_text">3년이 지나고 다시 보니 이때가 그립다.</div>
+                            <div class="reminiscence_list_item_date">[2024.09.02]</div>
+                        </div>
+                </div>
+            </div>
         </section>
+
     </div>
 </body>
+
 </html>
