[23.09.02] 윤준수 과제 완료

--- a/diary.html
+++ b/diary.html
@@ -117,6 +117,9 @@
             등록하기
           </button>
         </form>
+        <button id="upFloatingButton" class="none">
+          <img src="./public/icons/up_outline_light_xl.svg" alt="" />
+        </button>
       </aside>
     </main>
     <footer>
