--- a/다이어리/diary-edit.html
+++ b/다이어리/diary-edit.html
@@ -93,6 +93,32 @@
             </div>
           </div>
         </div>
+        <div class="comment_container">
+          <div class="comment_header_container">
+            <div class="comment_title">회고</div>
+            <div class="comment_input_container">
+              <input class="comment_input" type="text" placeholder="수정중일땐 회고를 작성할 수 없어요." disabled/>
+              <button class="comment_input_button" disabled>입력</button>
+            </div>
+            <div>
+              <div class="comments_container">
+                <div class="comment_content">3년이 지나고 다시 보니 이때가 그립다.</div>
+                <div class="comment_date">[2024. 09. 24]</div>
+                <div class="comment_divider"></div>
+              </div>
+              <div class="comments_container">
+                <div class="comment_content">3년이 지나고 다시 보니 이때가 그립다.</div>
+                <div class="comment_date">[2024. 09. 24]</div>
+                <div class="comment_divider"></div>
+              </div>
+              <div class="comments_container">
+                <div class="comment_content">3년이 지나고 다시 보니 이때가 그립다.</div>
+                <div class="comment_date">[2024. 09. 24]</div>
+                <div class="comment_divider"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
