--- a/detail.html
+++ b/detail.html
@@ -32,7 +32,28 @@
       <div class="buttonWrap">
         <!-- <button class="whiteBtn">목록</button> -->
         <button class="whiteBtn editBtn" onclick="editBtn()">수정</button>
-        <button class="whiteBtn" onclick="deleteBtn()">삭제</button>
+        <button class="whiteBtn" onclick="deleteBtn(event,queryStringGet())">
+          삭제
+        </button>
+      </div>
+      <div class="commentWrap">
+        <label for="commentInput">
+          회고
+          <div class="commentInputWrap">
+            <input
+              id="commentInput"
+              type="text"
+              placeholder="회고를 남겨보세요."
+            />
+            <button class="blackBtn" onclick="commentAdd()">입력</button>
+          </div>
+        </label>
+        <div id="commentListWrap" class="commentList"></div>
+        <!-- <ul>
+          <li>ㄴㅇㄹㅇㄴ<span class="commentDate">2024.01.01</span></li>
+          <li>ㄴㅇㄹㅇㄴ<span class="commentDate">2024.01.01</span></li>
+          <li>ㄴㅇㄹㅇㄴ<span class="commentDate">2024.01.01</span></li>
+        </ul> -->
       </div>
     </div>
 
