--- a/edit.html
+++ b/edit.html
@@ -26,6 +26,7 @@
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/ko.js"></script>
 
     <script src="./js/index.js"></script>
+    <script src="./js/editor.js"></script>
     <script src="./js/edit.js"></script>
   </body>
 </html>
