--- a/detail.html
+++ b/detail.html
@@ -44,6 +44,7 @@
               id="commentInput"
               type="text"
               placeholder="회고를 남겨보세요."
+              onkeypress="commentAddEnter(event)"
             />
             <button class="blackBtn" onclick="commentAdd()">입력</button>
           </div>
@@ -56,6 +57,8 @@
         </ul> -->
       </div>
     </div>
+
+    <div class="scrollBox"></div>
 
     <footer></footer>
     <script src="./js/index.js"></script>
