스크롤 버튼 렌더링 함수 처리에 따른 수정

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
     </section>
 
     <div class="scrollBox">
-      <button class="scrollUpBtn" onclick="scrollTopAction()">
+      <!-- <button class="scrollUpBtn" onclick="scrollTopAction()">
         <img src="./img/up_outline_light_xl.svg" alt="scrollUp" />
         <span class="blind">맨위로 이동</span>
-      </button>
+      </button> -->
     </div>
 
     <footer>
