--- a/다이어리/diary-detail.html
+++ b/다이어리/diary-detail.html
@@ -21,26 +21,10 @@
           <div class="comment_header_container">
             <div class="comment_title">회고</div>
             <div class="comment_input_container">
-              <input class="comment_input" type="text" placeholder="회고를 남겨보세요."/>
-              <button class="comment_input_button">입력</button>
+              <input id="comment_input" type="text" placeholder="회고를 남겨보세요."/>
+              <button class="comment_input_button" onclick="setupCommentInput()">입력</button>
             </div>
-            <div>
-              <div class="comments_container">
-                <div class="comment_content">3년이 지나고 다시 보니 이때가 그립다.</div>
-                <div class="comment_date">[2024. 09. 24]</div>
-                <div class="comment_divider"></div>
-              </div>
-              <div class="comments_container">
-                <div class="comment_content">3년이 지나고 다시 보니 이때가 그립다.</div>
-                <div class="comment_date">[2024. 09. 24]</div>
-                <div class="comment_divider"></div>
-              </div>
-              <div class="comments_container">
-                <div class="comment_content">3년이 지나고 다시 보니 이때가 그립다.</div>
-                <div class="comment_date">[2024. 09. 24]</div>
-                <div class="comment_divider"></div>
-              </div>
-            </div>
+            <div id="comments_container_box"></div>
           </div>
         </div>
       </div>
