--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -123,8 +123,8 @@
             </div>
           </div>
         </div>
-        <div class="topScroll" onclick="upScroll()">
-          <img src="./image/topscroll.png" width="40px" />
+        <div class="topScrollBox" onclick="upScroll()">
+          <img src="./image/topscroll.png" width="40px" class="topScroll" />
         </div>
         <div class="footer_layout">
           <div class="footer">
