--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                 </form>
             </div>
         </div>
+        <div class="scroll-up-btn">
+            <p>위로 스크롤</p>
+            <i class="arrow up"></i>
+        </div>
     </main>
     <footer>
         <div class="footer">
