--- a/homework/section2/detail.html
+++ b/homework/section2/detail.html
@@ -13,12 +13,14 @@
       <div>민서의 다이어리</div>
     </div>
     <div class="메인">
-      <!-- 초기 디테일 화면 보여주기-->
       <div id="초기_화면" class="바뀌는_부분">
         <div class="타이틀_영역">
           <div id="타이틀" class="타이틀"></div>
           <div class="감정_날짜">
-            <div id="감정" class="감정"></div>
+            <div class="감정_영역">
+              <img width="32px" />
+              <div id="감정" class="감정"></div>
+            </div>
             <div id="날짜" class="날짜"></div>
           </div>
         </div>
@@ -30,39 +32,7 @@
           <button onclick="수정버튼기능()" class="수정_버튼">수정</button>
         </div>
       </div>
-
-      <!-- 수정 화면 보여주기-->
-      <div id="수정_화면" class="바뀌는_부분">
-        <div class="수정_기분_선택_영역">
-          <div class="기분_레이블">오늘 기분은 어땟나요?</div>
-          <div class="기분_선택_라디오_영역">
-            <input class="기분_영역" type="radio" value="행복해요" name="기분" />
-            <div class="기분_텍스트">행복해요</div>
-            <input class="기분_영역" type="radio" value="슬퍼요" name="기분" />
-            <div class="기분_텍스트">슬퍼요</div>
-            <input class="기분_영역" type="radio" value="놀랐어요" name="기분" />
-            <div class="기분_텍스트">놀랐어요</div>
-            <input class="기분_영역" type="radio" value="화나요" name="기분" />
-            <div class="기분_텍스트">화나요</div>
-            <input class="기분_영역" type="radio" value="기타" name="기분" />
-            <div class="기분_텍스트">기타</div>
-          </div>
-        </div>
-        <div class="수정_제목_영역">
-          <div class="레이블">제목</div>
-          <input id="제목인풋" class="제목_인풋" type="text" />
-        </div>
-        <div class="수정_내용_영역">
-          <div class="레이블">내용</div>
-          <textarea id="내용인풋" class="내용_인풋"></textarea>
-        </div>
-        <div class="수정_버튼_영역">
-          <button id="취소버튼" class="취소_버튼" onclick="취소버튼기능()">취소</button>
-          <button id="수정하기버튼" class="수정하기_버튼" onclick="수정하기버튼기능()">수정하기</button>
-        </div>
-      </div>
     </div>
-  </div>
 </body>
 
 </html>
