--- a/css-js/homework/diary-savor/diary-detail.html
+++ b/css-js/homework/diary-savor/diary-detail.html
@@ -10,52 +10,51 @@
         <p>00의 다이어리</p>
       </div>
       <!-- 여기 버튼 onclick 발생 시 변하는 내용 -->
-      <div class="detail-main-container">
-        <div class="detail-content-top">
-          <p class="detail-content-title">타이틀</p>
-          <div class="detail-title">
-            <div class="detail-menu">
-              <img src="./assets/기타 (s).png" />
-              <p>감정</p>
-            </div>
-            <div class="detail-menu">
-              <p>2024.09.02</p>
-              <p>작성</p>
-            </div>
-          </div>
-        </div>
-        <div class="detail-content">
-          <p>부제목</p>
-          <p>content</p>
-        </div>
-        <div class="detail-edit-btn">
-          <button>수정</button>
-        </div>
-      </div>
+      <div class="detail-main-container"></div>
+
       <!-- 수정하기 누른 경우 -->
       <!-- <div class="detail-main-container">
         <div class="detail-content-top">
           <p>오늘 기분은 어땠나요?</p>
-          <div class="detail-title">
-            <div>
-              <img src="./assets/기타 (s).png" />
-              <p>감정</p>
+          <div class="radio-emotion">
+            <div class="radio-emotion-element">
+              <input id="happy" name="side-emotion" type="radio" value="happy" checked oninput="sidebarEmpty()" />
+              <label for="happy">행복해요</label>
             </div>
-            <div>
-              <p>2024.09.02</p>
-              <p>작성</p>
+            <div class="radio-emotion-element">
+              <input id="sad" name="side-emotion" type="radio" value="sad" oninput="sidebarEmpty()" />
+              <label for="sad">슬퍼요</label>
+            </div>
+            <div class="radio-emotion-element">
+              <input id="suprise" name="side-emotion" type="radio" value="suprise" oninput="sidebarEmpty()" />
+              <label for="suprise">놀랐어요</label>
+            </div>
+            <div class="radio-emotion-element">
+              <input id="angry" name="side-emotion" type="radio" value="angry" oninput="sidebarEmpty()" />
+              <label for="angry">화나요</label>
+            </div>
+            <div class="radio-emotion-element">
+              <input id="etc" name="side-emotion" type="radio" value="etc" oninput="sidebarEmpty()" />
+              <label for="etc">기타</label>
             </div>
           </div>
         </div>
         <div class="detail-content">
-          <p>부제목</p>
-          <p>content</p>
+          <div>
+            <p>제목</p>
+            <input />
+          </div>
+          <div>
+            <p>내용</p>
+            <textarea></textarea>
+          </div>
         </div>
         <div class="detail-edit-btn">
-          <button>수정</button>
+          <button>취소</button>
+          <button>수정하기</button>
         </div>
       </div> -->
     </div>
-    <script src="./diary-saver.js"></script>
+    <script src="./diary-detail.js"></script>
   </body>
 </html>
